# Skills-Verified

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
data/: campaign_signatures.yaml  exfiltration_patterns.yaml  malicious_authors.yaml  malicious_hashes.yaml  obfuscation_signatures.yaml  reverse_shell_signatures.yaml
docs/superpowers/plans/: 2026-04-12-skills-verified.md  2026-04-16-ci-cd-integration.md
docs/superpowers/specs/: 2026-04-12-skills-verified-design.md  2026-04-16-ci-cd-integration-design.md  2026-04-16-skills-verified-v2-threat-analyzers.md
examples/: README.md
examples/github-actions/: basic.yml  full.yml  monorepo.yml
examples/gitlab-ci/: basic.yml  full.yml  monorepo.yml
src/skills_verified/: cli.py
src/skills_verified/analyzers/: bandit_analyzer.py  behavioral_analyzer.py  config_injection_analyzer.py  cve_analyzer.py  (+13 more)
templates/: gitlab-ci-skills-verified.yml
tests/: test_badge.py  test_behavioral_analyzer.py  test_cli.py  test_codeclimate.py  test_config_injection_analyzer.py  test_console_output.py  test_exfiltration_analyzer.py  test_fetcher.py  test_github_annotations.py  test_integration.py  test_known_threats_analyzer.py  test_markdown_report.py  test_mcp_analyzer.py  test_metadata_analyzer.py  test_obfuscation_analyzer.py  test_pattern_analyzer.py  test_permissions_analyzer.py  test_pipeline.py  test_platform_detector.py  test_privilege_analyzer.py  test_reverse_shell_analyzer.py  test_scorer.py  test_semgrep_analyzer.py  test_signature_loader.py  test_threshold.py
(+24 files in other folders)
